--- a/code/Unemployment rates plotly/Unemployment rates plotting.ipynb
+++ b/code/Unemployment rates plotly/Unemployment rates plotting.ipynb
@@ -1,25 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## importing libraries for use in code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 564,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import scale\n",
     "import pandas as pd\n",
     "from pandas import DataFrame, Series\n",
     "import pyodbc\n",
     "import plotly.plotly as py\n",
-    "import cufflinks as cf"
+    "import cufflinks as cf\n",
+    "from sklearn.decomposition import RandomizedPCA\n",
+    "from sklearn.cluster import KMeans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## copy of code from CitiesClustering to get the city groupings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 565,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 566,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 567,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 568,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 569,
    "metadata": {},
    "outputs": [
     {
@@ -84,21 +101,19 @@
        "       0, 0, 3, 4, 3, 0, 0, 0, 5, 0, 5, 5, 5, 5, 5, 3, 5])"
       ]
      },
-     "execution_count": 497,
+     "execution_count": 569,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.decomposition import RandomizedPCA\n",
-    "from sklearn.cluster import KMeans\n",
     "kmeans = KMeans(n_clusters=6, random_state=0).fit(city_np_array_data[:,1:-1])\n",
     "kmeans.labels_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 570,
    "metadata": {},
    "outputs": [
     {
@@ -118,31 +133,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## creating dataframes of data and plotting with plotly"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 571,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(city)"
+    "df = pd.DataFrame(city)  # creating a pandas DataFrame of the list of uk cities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 572,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df['labels'] = kmeans.labels_.tolist()\n",
-    "df['uber'] = uber"
+    "df['labels'] = kmeans.labels_.tolist()  # adding city grouping labels as column in df\n",
+    "df['uber'] = uber  # adding whether or not city has uber to column in df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 573,
    "metadata": {
     "collapsed": true
    },
@@ -154,34 +176,37 @@
     "g3 = df[df.Labels==3]\n",
     "g2 = df[df.Labels==2]\n",
     "g1 = df[df.Labels==1]\n",
-    "g0 = df[df.Labels==0]"
+    "g0 = df[df.Labels==0]\n",
+    "# created separate DataFrame from df for each group of cities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 574,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "c = pyodbc.connect('DSN=sqluberconn;UID=tabi;PWD=password')"
+    "c = pyodbc.connect('DSN=sqluberconn;UID=tabi;PWD=password')\n",
+    "# create connection to SQL database with unemployment rate data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 575,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "unemploy = pd.read_sql_query(sql = r'select [UALAD], [2011], [2012], [2013], [2014], [2015], [2016]from unemployment.[Rates_perc]', con = c)"
+    "unemploy = pd.read_sql_query(sql = r'select [UALAD], [2011], [2012], [2013], [2014], [2015], [2016]from unemployment.[Rates_perc]', con = c)\n",
+    "# run SQL query throurgh connector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 576,
    "metadata": {
     "collapsed": true
    },
@@ -192,57 +217,62 @@
     "g3 = g3.set_index(['City'])\n",
     "g2 = g2.set_index(['City'])\n",
     "g1 = g1.set_index(['City'])\n",
-    "g0 = g0.set_index(['City'])"
+    "g0 = g0.set_index(['City'])\n",
+    "# set indexes of group DataFrames to city for ease of joining"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 577,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "unemploy = unemploy.set_index(['UALAD'])"
+    "unemploy = unemploy.set_index(['UALAD'])\n",
+    "# set indexes of unemployment DataFrame for ease of joining "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 578,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g5 = pd.concat([g5, unemploy], axis = 1, join = 'inner')"
+    "g5 = pd.concat([g5, unemploy], axis = 1, join = 'inner')\n",
+    "# join group 5 DataFrame to unemployment "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 579,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g5_nuber = g5[g5.Uber=='0']"
+    "g5_nuber = g5[g5.Uber=='0']\n",
+    "# create DataFrame of group 5 cities without uber"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 580,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "del g5_nuber['Labels']\n",
-    "del g5_nuber['Uber']"
+    "del g5_nuber['Uber']\n",
+    "# delete lables and uber column for ease of plotting "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 581,
    "metadata": {
     "collapsed": true
    },
@@ -250,36 +280,40 @@
    "source": [
     "g5_uber = g5[g5.Uber=='1']\n",
     "del g5_uber['Labels']\n",
-    "del g5_uber['Uber']"
+    "del g5_uber['Uber']\n",
+    "# repeat previous process for group 5 cities with uber"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 582,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g3 = pd.concat([g3, unemploy], axis = 1, join = 'inner')"
+    "g3 = pd.concat([g3, unemploy], axis = 1, join = 'inner')\n",
+    "# join group 3 DataFrame to unemployment "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 583,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "g3_nuber = g3[g3.Uber=='0']\n",
+    "# create DataFrame of group 3 cities without uber\n",
     "del g3_nuber['Labels']\n",
-    "del g3_nuber['Uber']"
+    "del g3_nuber['Uber']\n",
+    "# delete lables and uber column for ease of plotting "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 584,
    "metadata": {
     "collapsed": true
    },
@@ -287,36 +321,40 @@
    "source": [
     "g3_uber = g3[g3.Uber=='1']\n",
     "del g3_uber['Labels']\n",
-    "del g3_uber['Uber']"
+    "del g3_uber['Uber']\n",
+    "# repeat previous process for group 3 cities with uber"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 585,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g0 = pd.concat([g0, unemploy], axis = 1, join = 'inner')"
+    "g0 = pd.concat([g0, unemploy], axis = 1, join = 'inner')\n",
+    "# join group 0 DataFrame to unemployment "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 586,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "g0_nuber = g0[g0.Uber=='0']\n",
+    "# create DataFrame of group 0 cities without uber\n",
     "del g0_nuber['Labels']\n",
-    "del g0_nuber['Uber']"
+    "del g0_nuber['Uber']\n",
+    "# delete lables and uber column for ease of plotting "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 587,
    "metadata": {
     "collapsed": true
    },
@@ -324,67 +362,73 @@
    "source": [
     "g0_uber = g0[g0.Uber=='1']\n",
     "del g0_uber['Labels']\n",
-    "del g0_uber['Uber']"
+    "del g0_uber['Uber']\n",
+    "# repeat previous process for group 0 cities with uber"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 588,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "us = pd.read_csv(r'C:\\Users\\Student\\Documents\\Uber_Project\\data\\uberstartdates.csv')"
+    "us = pd.read_csv(r'C:\\Users\\Student\\Documents\\Uber_Project\\data\\uberstartdates.csv')\n",
+    "# read csv file containing uber start year of each UK city/town where uber operates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 589,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "us = us.set_index(['City'])"
+    "us = us.set_index(['City'])\n",
+    "# set index for ease of joining"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 590,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g5_uber = pd.concat([us, g5_uber], axis = 1, join = 'inner')"
+    "g5_uber = pd.concat([us, g5_uber], axis = 1, join = 'inner')\n",
+    "# uber start date list to group 5 cities with uber DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 591,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g5_uber14 = g5_uber[g5_uber.UberStart == 2014]"
+    "g5_uber14 = g5_uber[g5_uber.UberStart == 2014]\n",
+    "# create DataFrame for cities where uber started in 2014"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 592,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g5_uber15 = g5_uber[g5_uber.UberStart == 2015]"
+    "g5_uber15 = g5_uber[g5_uber.UberStart == 2015]\n",
+    "# create DataFrame for cities where uber started in 2015"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 593,
    "metadata": {
     "collapsed": true
    },
@@ -392,12 +436,13 @@
    "source": [
     "del g5_uber14['UberStart']\n",
     "del g5_uber14['2011']\n",
-    "del g5_uber14['2012']"
+    "del g5_uber14['2012']\n",
+    "# delete columns for ease of plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 594,
    "metadata": {
     "collapsed": true
    },
@@ -405,145 +450,135 @@
    "source": [
     "del g5_uber15['UberStart']\n",
     "del g5_uber15['2011']\n",
-    "del g5_uber15['2012']"
+    "del g5_uber15['2012']\n",
+    "# delete columns for ease of plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 595,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g5_uber14 = g5_uber14.apply(pd.to_numeric).mean()"
+    "g5_uber14 = g5_uber14.apply(pd.to_numeric).mean()\n",
+    "g5_uber15 = g5_uber15.apply(pd.to_numeric).mean()\n",
+    "g5_nuber = g5_nuber.apply(pd.to_numeric).mean()\n",
+    "# change data type of entries to numeric and calculate means"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 596,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g5_uber15 = g5_uber15.apply(pd.to_numeric).mean()"
+    "g5_ue = pd.concat([g5_uber14, g5_uber15, g5_nuber], axis = 1, join = 'inner')\n",
+    "# join DataFrames for ease of plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 597,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g5_nuber = g5_nuber.apply(pd.to_numeric).mean()"
+    "g5_ue.columns = ['Uber 2014', 'Uber 2015', 'No Uber']\n",
+    "# name columns of new DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 598,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g5_ue = pd.concat([g5_uber14, g5_uber15, g5_nuber], axis = 1, join = 'inner')"
+    "g5_layout = {'title': 'Group 5 Cities', 'xaxis':{'title': 'Year'}, 'yaxis':{'title': 'Unemployment Rate (%)'}}\n",
+    "# create layout with graph title and axis titles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "g5_ue.columns = ['Uber 2014', 'Uber 2015', 'No Uber']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 530,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "g5_layout = {'title': 'Group 5 Cities', 'xaxis':{'title': 'Year'}, 'yaxis':{'title': 'Unemployment Rate (%)'}}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 599,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tabidavies/73.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tabidavies/77.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 531,
+     "execution_count": 599,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g5_ue.iplot(kind = 'scatter', layout = g5_layout)"
+    "g5_ue.iplot(kind = 'scatter', layout = g5_layout)\n",
+    "# plot group 5 unemployment rates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 600,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g3_uber = pd.concat([us, g3_uber], axis = 1, join = 'inner')"
+    "g3_uber = pd.concat([us, g3_uber], axis = 1, join = 'inner')\n",
+    "# group 3 had no cities where uber started before 2016 therefore could not be plotted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 601,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g0_uber = pd.concat([us, g0_uber], axis = 1, join = 'inner')"
+    "g0_uber = pd.concat([us, g0_uber], axis = 1, join = 'inner')\n",
+    "# uber start date list to group 0 cities with uber DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 602,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g0_uber14 = g0_uber[g0_uber.UberStart == 2014]"
+    "g0_uber14 = g0_uber[g0_uber.UberStart == 2014]\n",
+    "# create DataFrame for cities where uber started in 2014"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 603,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g0_uber15 = g0_uber[g0_uber.UberStart == 2015]"
+    "g0_uber15 = g0_uber[g0_uber.UberStart == 2015]\n",
+    "# create DataFrame for cities where uber started in 2015"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 604,
    "metadata": {
     "collapsed": true
    },
@@ -551,12 +586,13 @@
    "source": [
     "del g0_uber14['UberStart']\n",
     "del g0_uber14['2011']\n",
-    "del g0_uber14['2012']"
+    "del g0_uber14['2012']\n",
+    "# delete columns for ease of plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 605,
    "metadata": {
     "collapsed": true
    },
@@ -564,96 +600,82 @@
    "source": [
     "del g0_uber15['UberStart']\n",
     "del g0_uber15['2011']\n",
-    "del g0_uber15['2012']"
+    "del g0_uber15['2012']\n",
+    "# delete columns for ease of plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 606,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g0_uber14 = g0_uber14.apply(pd.to_numeric).mean()"
+    "g0_uber14 = g0_uber14.apply(pd.to_numeric).mean()\n",
+    "g0_uber15 = g0_uber15.apply(pd.to_numeric).mean()\n",
+    "g0_nuber = g0_nuber.apply(pd.to_numeric).mean()\n",
+    "# change data type of entries to numeric and calculate means"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 607,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g0_uber15 = g0_uber15.apply(pd.to_numeric).mean()"
+    "g0_ue = pd.concat([g0_uber14, g0_uber15, g0_nuber], axis = 1, join = 'inner')\n",
+    "# join DataFrames for ease of plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 608,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g0_nuber = g0_nuber.apply(pd.to_numeric).mean()"
+    "g0_ue.columns = ['Uber 2014', 'Uber 2015', 'No Uber']\n",
+    "# name columns of new DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 609,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "g0_ue = pd.concat([g0_uber14, g0_uber15, g0_nuber], axis = 1, join = 'inner')"
+    "g0_layout = {'title': 'Group 0 Cities', 'xaxis':{'title': 'Year'}, 'yaxis':{'title': 'Unemployment Rate (%)'}}\n",
+    "# create layout with graph title and axis titles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "g0_ue.columns = ['Uber 2014', 'Uber 2015', 'No Uber']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 544,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "g0_layout = {'title': 'Group 0 Cities', 'xaxis':{'title': 'Year'}, 'yaxis':{'title': 'Unemployment Rate (%)'}}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 610,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tabidavies/75.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tabidavies/79.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 545,
+     "execution_count": 610,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g0_ue.iplot(kind = 'scatter', layout = g0_layout)"
+    "g0_ue.iplot(kind = 'scatter', layout = g0_layout)\n",
+    "# plot group 5 unemployment rates"
    ]
   },
   {
